[package]
name = "shiftreg-spi"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = "1.1.2"
embedded-hal = "1.0.0-rc.3"

[dev-dependencies]
critical-section = { version = "1.1.2", features = ["std"] }
linux-embedded-hal = { git = "https://github.com/rust-embedded/linux-embedded-hal.git", rev = "a1fb24103e575615a29c6748cdeff1f0e7a3dae3" }
